examples/test/testpolicy3435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3435
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key25: value18
      key48: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value4
      podSelector:
        matchLabels:
          key11: value39
          key25: value36
